--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "react-native": "0.52.0",
     "react-navigation": "^1.0.0-beta.27",
     "redux": "^3.7.2"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts"
+    ]
   }
 }
